# fastPASTA

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  examples.md  justfile  requirements.txt
.cargo/: config.toml
.gitlab-templates/: install-just.yml  lint.yml  sanitizer.yml
alice_daq_protocol_reader/: Cargo.toml
alice_daq_protocol_reader/src/: bufreader_wrapper.rs  config.rs  data_wrapper.rs  input_scanner.rs  lib.rs  mem_pos_tracker.rs  prelude.rs  rdh.rs  stdin_reader.rs
alice_daq_protocol_reader/src/rdh/: rdh0.rs  rdh1.rs  rdh2.rs  rdh3.rs  rdh_cru.rs
alice_protocol_reader/: Cargo.toml  LICENSE  README.md
alice_protocol_reader/src/: bufreader_wrapper.rs  cdp_arr.rs  cdp_wrapper.rs  data_wrapper.rs  data_wrapper_boxed.rs  input_scanner.rs  lib.rs  mem_pos_tracker.rs  prelude.rs  rdh.rs  scan_cdp.rs  stats.rs  stdin_reader.rs
alice_protocol_reader/src/cdp_wrapper/: cdp_array.rs  cdp_vec.rs
alice_protocol_reader/src/config/: filter.rs
alice_protocol_reader/src/rdh/: rdh0.rs  rdh1.rs  rdh2.rs  rdh3.rs  rdh_cru.rs  test_data.rs
benches/: benchmarks.rs  io_bench.rs  io_benchmark.rs  rdh_deserialize_bench.rs  rdh_serialize_bench.rs  rdh_validation_bench.rs
doc/: FileScanner_structural.puml  ITS_payload_fsm_continuous_mode.puml  InputScanner_structural.puml  cdp_payload_fsm.puml  cdp_payload_fsm_continuous_mode.puml  checks_list.md  data_flow.md  fastPASTA_structural.puml  hbf_continuous_fsm.puml  sequence_initialization.puml  sequence_validation_mode.puml  sequence_view_mode.puml
fastpasta/: Cargo.toml  build.rs
fastpasta/benches/: benchmarks.rs  io_bench.rs  rdh_deserialize_bench.rs  rdh_serialize_bench.rs  rdh_validation_bench.rs  trigger_stats.rs
fastpasta/src/: cli.rs  config.rs  controller.rs  init.rs  input.rs  lib.rs  main.rs  stats.rs  util.rs  words.rs
fastpasta/src/analyze/: lib.rs  validators.rs  view.rs
fastpasta/src/analyze/validators/: its.rs  lib.rs  link_validator.rs  rdh.rs  rdh_running.rs  validator_dispatcher.rs
fastpasta/src/analyze/validators/its/: alpide.rs  cdp_running.rs  data_words.rs  its_payload_fsm_cont.rs  lib.rs  status_word.rs  status_words.rs  util.rs
fastpasta/src/analyze/validators/its/alpide/: alpide_readout_frame.rs  lane_alpide_frame_analyzer.rs
fastpasta/src/analyze/validators/its/cdp_running/: cdp_tracker.rs  rdh_validator.rs  readout_frame.rs
fastpasta/src/analyze/validators/its/data_words/: ib.rs  ob.rs
fastpasta/src/analyze/validators/its/status_word/: ddw.rs  ihw.rs  tdh.rs  tdt.rs  util.rs
fastpasta/src/analyze/view/: hbf_view.rs  its_readout_frame.rs  lib.rs  rdh_view.rs
fastpasta/src/analyze/view/its_readout_frame/: its_readout_frame_data_view.rs  its_readout_frame_view.rs
fastpasta/src/config/: check.rs  custom_checks.rs  inputoutput.rs  lib.rs  test_util.rs  util.rs  view.rs
fastpasta/src/config/custom_checks/: custom_checks_cfg.rs
fastpasta/src/input/rdh/: rdh0.rs
fastpasta/src/stats/: controller.rs  err_printer.rs  error_stats.rs  its_stats.rs  lib.rs  rdh_stats.rs  stat_format_utils.rs  stat_summerize_utils.rs  stats_collector.rs  stats_controller.rs  stats_report.rs  stats_validation.rs  trigger_stats.rs
fastpasta/src/stats/its_stats/: alpide_stats.rs
fastpasta/src/stats/stats_collector/: error_stats.rs  its_stats.rs  rdh_stats.rs  trigger_stats.rs
fastpasta/src/stats/stats_collector/its_stats/: alpide_stats.rs
fastpasta/src/stats/stats_report/: report.rs  stat_format_utils.rs  stat_summerize_utils.rs  table_formatter_utils.rs
fastpasta/src/util/: lib.rs
fastpasta/src/words/: example_data.rs  its.rs
fastpasta/src/words/its/: alpide.rs  alpide_words.rs  data_words.rs  lane_data_frame.rs  status_words.rs
fastpasta/src/words/its/alpide/: alpide_word.rs
fastpasta/src/words/its/status_words/: cdw.rs  ddw.rs  ihw.rs  tdh.rs  tdt.rs  util.rs
fastpasta/src/write/: lib.rs  writer.rs
fastpasta/tests/: fastpasta.rs  fastpasta_10_rdh.rs  fastpasta_12_links_1hbf.rs  fastpasta_12_links_2hbf.rs  fastpasta_1_hbf_bad_cdp_structure.rs  fastpasta_1_hbf_bad_dw_ddw0.rs  fastpasta_1_hbf_bad_ihw_tdh.rs  fastpasta_1_hbf_bad_its_payload.rs  fastpasta_1_hbf_bad_tdt.rs  fastpasta_2_hbf_2nd_bad_frame.rs  fastpasta_2_rdh_det_field_v1_21_0.rs  fastpasta_ci_ols_data.rs  fastpasta_err_not_hbf.rs  fastpasta_invalid_lane_order.rs  fastpasta_rawtf_epn180_l6_1.rs  fastpasta_rawtf_fee24612_4rdh.rs  fastpasta_readout_super_page1.rs  fastpasta_tdh_no_data.rs  fastpasta_tdh_no_data_ihw.rs  fastpasta_thrs_cdw_links.rs  fastpasta_user_errors.rs
fastpasta/tests/util/: mod.rs
fastpasta_processing/: Cargo.toml
fastpasta_processing/benches/: rdh_deserialize_bench.rs  rdh_serialize_bench.rs  rdh_validation_bench.rs
fastpasta_processing/src/: config.rs  main.rs
fastpasta_toml_macro/: Cargo.toml  README.md
fastpasta_toml_macro/fastpasta_toml_macro_derive/: Cargo.toml  README.md
fastpasta_toml_macro/fastpasta_toml_macro_derive/src/: lib.rs
fastpasta_toml_macro/src/: lib.rs
scripts/: benchmark.just  check_version_tag.just  pretty_print.just  profiling.just  prompt.just  sanitizers.just  test_coverage.just  unique-error-codes.just  unique_error_codes.just  util.just
src/: analyze.rs  config.rs  data_words.rs  data_write.rs  input.rs  lib.rs  main.rs  stats.rs  util.rs  validators.rs  view.rs  words.rs
src/analyze/: lib.rs  view.rs
src/config/: inputoutput.rs  lib.rs  prelude.rs  test_util.rs
test-data/: err_not_hbf.raw  readout.superpage.1.raw  regression_tests.sh  run_regression.sh  tests.txt
test-regression/: regression_tests.sh
tests/: fastpasta.rs  fastpasta_10_rdh.rs  fastpasta_1_hbf_bad_cdp_structure.rs  fastpasta_1_hbf_bad_dw_ddw0.rs  fastpasta_1_hbf_bad_ihw_tdh.rs  fastpasta_1_hbf_bad_its_payload.rs  fastpasta_1_hbf_bad_tdt.rs  fastpasta_err_not_hbf.rs  fastpasta_rawtf_epn180_l6_1.rs  fastpasta_readout_super_page1.rs  fastpasta_tdh_no_data.rs  fastpasta_tdh_no_data_ihw.rs  fastpasta_thd_no_data_ihw.rs  fastpasta_thrs_cdw_links.rs  fastpasta_user_errors.rs
tests-bench/: fastpasta_bench.sh
toml_macro/: Cargo.toml
(+140 files in other folders)
