[package]
name = "fastpasta"
version = "1.7.2" # the current version, obeying semver
edition = "2021"
readme = "README.md"
repository = "https://gitlab.cern.ch/mkonig/fastpasta"
license = "MIT OR Apache-2.0"
keywords = ["CLI", "parse", "Verification"]
description = "CLI for verifying or examining readout data from the ALICE detector."
categories = ["command-line-utilities"]
authors = ["Marc Beck König <mbkj@tutamail.com>"]

[badges]
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
gag = "1.0.0"
pretty_assertions = "1.3.0"
criterion = "0.5.1"
assert_fs = "1.0.13"
fancy-regex = "0.11.0"


[dependencies]
byteorder = "1.4.3"
clap = { version = "4.3.0", features = ["derive"] }
crossbeam-channel = "0.5.6"
ctrlc = { version = "3.4.0", features = ["termination"] }
flume = "0.10.14"
fmt = "0.1.0"
is-terminal = "0.4.7"
itertools = "0.10.5"
log = "0.4.17"
owo-colors = "3.5.0"
regex = "1.8.1"
ringbuffer = "0.13.0"
sm = "0.9.0"
stderrlog = "0.5.4"
tabled = { version = "0.10.0", features = ["color"]}

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
