[package]
name = "alice_daq_protocol_reader"
version = "0.9.0"
edition = "2021"
description = "Reader library for reading raw binary data from the ALICE detector into a convenient structure for implementing analysis."
authors = ["Marc Beck König <mbkj@tutamail.com>"]
repository = "https://gitlab.cern.ch/mkonig/fastpasta"
license = "MIT OR Apache-2.0"
keywords = ["parse", "verification"]
categories = ["parse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crossbeam-channel = "0.5.8"
flume = "0.10.14"

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-dir = "0.1.11"
