[package]
name = "alice_protocol_reader"
version = "0.11.2"
edition = "2021"
description = "Reader library for reading raw binary data from the ALICE detector into a convenient structure for implementing analysis."
keywords = ["parser", "verification"]
categories = ["parser-implementations"]
license.workspace = true
repository.workspace = true
authors.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crossbeam-channel = "0.5.8"
flume = "0.11.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-dir = "0.1.11"
