[package]
name = "fastpasta_toml_macro_derive"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://gitlab.cern.ch/mkonig/fastpasta"
license = "MIT OR Apache-2.0"
keywords = ["procedural-macro", "derive-macro", "toml-macro"]
description = "Procedural derive macro for serializing a struct into a TOML template with field descriptions that is easily edited and deserialized."
categories = ["rust-patterns", "development-tools"]
authors = ["Marc Beck König <mbkj@tutamail.com>"]

[badges]
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
quote = "1.0.29"
syn = "2.0.23"
